{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 691,
  "lineage": "975e2d59-b08c-89cf-209b-61f00f74b213",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "www_appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/applicationGateways/www-appgw/backendAddressPools/www-beap",
                "ip_addresses": [],
                "name": "www-beap"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "dedicated_backend_connection_enabled": false,
                "host_name": "",
                "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/applicationGateways/www-appgw/backendHttpSettingsCollection/www-be-htst",
                "name": "www-be-htst",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/applicationGateways/www-appgw/frontendIPConfigurations/www-feip",
                "name": "www-feip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/publicIPAddresses/www-appip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/applicationGateways/www-appgw/frontendPorts/www-feport",
                "name": "www-feport",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/applicationGateways/www-appgw/gatewayIPConfigurations/www-ip-appgw",
                "name": "www-ip-appgw",
                "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet1/subnets/www-appgw"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/applicationGateways/www-appgw/frontendIPConfigurations/www-feip",
                "frontend_ip_configuration_name": "www-feip",
                "frontend_port_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/applicationGateways/www-appgw/frontendPorts/www-feport",
                "frontend_port_name": "www-feport",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/applicationGateways/www-appgw/httpListeners/www-httplstn",
                "name": "www-httplstn",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/applicationGateways/www-appgw",
            "identity": [],
            "location": "koreasouth",
            "name": "www-appgw",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/applicationGateways/www-appgw/backendAddressPools/www-beap",
                "backend_address_pool_name": "www-beap",
                "backend_http_settings_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/applicationGateways/www-appgw/backendHttpSettingsCollection/www-be-htst",
                "backend_http_settings_name": "www-be-htst",
                "http_listener_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/applicationGateways/www-appgw/httpListeners/www-httplstn",
                "http_listener_name": "www-httplstn",
                "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/applicationGateways/www-appgw/requestRoutingRules/www-rqrt",
                "name": "www-rqrt",
                "priority": 9,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "04-T1-www",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "www-appgw",
            "resource_group_name": "04-T1-www",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_public_ip.www_appip",
            "azurerm_resource_group.www_rg",
            "azurerm_subnet.www_appgw",
            "azurerm_virtual_network.www_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "www_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/natGateways/www-nat",
            "idle_timeout_in_minutes": 4,
            "location": "koreacentral",
            "name": "www-nat",
            "resource_group_name": "04-T1-www",
            "resource_guid": "72fd1a4b-66bd-49cc-8695-e545fbc5e88e",
            "sku_name": "Standard"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "www-nat",
            "resource_group_name": "04-T1-www",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.www_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "www_nat_v1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/natGateways/www-nat-v1",
            "idle_timeout_in_minutes": 4,
            "location": "koreasouth",
            "name": "www-nat-v1",
            "resource_group_name": "04-T1-www",
            "resource_guid": "f8f20be4-1d1d-487d-afe4-c180f3329d65",
            "sku_name": "Standard"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "www-nat-v1",
            "resource_group_name": "04-T1-www",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.www_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "www_nat_pubip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/natGateways/www-nat|/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/publicIPAddresses/www-natip",
            "nat_gateway_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/natGateways/www-nat",
            "public_ip_address_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/publicIPAddresses/www-natip"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.www_nat",
            "azurerm_public_ip.www_natip",
            "azurerm_resource_group.www_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "www_nat_v1_pubip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/natGateways/www-nat-v1|/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/publicIPAddresses/www-natip-v1",
            "nat_gateway_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/natGateways/www-nat-v1",
            "public_ip_address_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/publicIPAddresses/www-natip-v1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.www_nat_v1",
            "azurerm_public_ip.www_natip_v1",
            "azurerm_resource_group.www_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "www_bas_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/networkInterfaces/www-bas-nic",
            "internal_domain_name_suffix": "4sq4o0izr1iuplpeoutmikwddh.syx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "www-bas-nic-ipconf",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/publicIPAddresses/www-pubip",
                "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/subnets/www-bas"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "koreacentral",
            "mac_address": "00-22-48-6C-E3-A9",
            "name": "www-bas-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "04-T1-www",
            "virtual_machine_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Compute/virtualMachines/www-basvm"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "www-bas-nic",
            "resource_group_name": "04-T1-www",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_public_ip.www_basip",
            "azurerm_resource_group.www_rg",
            "azurerm_subnet.www_bas",
            "azurerm_virtual_network.www_vnet0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "www_db_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/networkInterfaces/www-db-nic",
            "internal_domain_name_suffix": "4sq4o0izr1iuplpeoutmikwddh.syx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "www-db-nic-ipconf",
                "primary": true,
                "private_ip_address": "10.0.4.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/subnets/www-db"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "koreacentral",
            "mac_address": "60-45-BD-45-22-58",
            "name": "www-db-nic",
            "private_ip_address": "10.0.4.4",
            "private_ip_addresses": [
              "10.0.4.4"
            ],
            "resource_group_name": "04-T1-www",
            "virtual_machine_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Compute/virtualMachines/www-dbvm"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "www-db-nic",
            "resource_group_name": "04-T1-www",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.www_rg",
            "azurerm_subnet.www_db",
            "azurerm_virtual_network.www_vnet0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "www_web1_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/networkInterfaces/www-web1-nic",
            "internal_domain_name_suffix": "4sq4o0izr1iuplpeoutmikwddh.syx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "www-web1-nic-ipconf",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/subnets/www-web1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "koreacentral",
            "mac_address": "60-45-BD-47-90-FB",
            "name": "www-web1-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "04-T1-www",
            "virtual_machine_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Compute/virtualMachines/www-web1vm"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "www-web1-nic",
            "resource_group_name": "04-T1-www",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.www_rg",
            "azurerm_subnet.www_web1",
            "azurerm_virtual_network.www_vnet0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "www_web1_v1_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/networkInterfaces/wwwweb1-v1-nic",
            "internal_domain_name_suffix": "plsfqsrugdfevfcjibhgtzueqe.psx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "www-web1-v1-nic-ipconf",
                "primary": true,
                "private_ip_address": "192.168.2.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet1/subnets/www-web1-v1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "koreasouth",
            "mac_address": "00-22-48-60-73-B5",
            "name": "wwwweb1-v1-nic",
            "private_ip_address": "192.168.2.4",
            "private_ip_addresses": [
              "192.168.2.4"
            ],
            "resource_group_name": "04-T1-www",
            "virtual_machine_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Compute/virtualMachines/www-vnet1-web1vm"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "wwwweb1-v1-nic",
            "resource_group_name": "04-T1-www",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.www_rg",
            "azurerm_subnet.www_web1_v1",
            "azurerm_virtual_network.www_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "www_web2_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/networkInterfaces/www-web2-nic",
            "internal_domain_name_suffix": "4sq4o0izr1iuplpeoutmikwddh.syx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "www-web2-nic-ipconf",
                "primary": true,
                "private_ip_address": "10.0.3.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/subnets/www-web2"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "koreacentral",
            "mac_address": "60-45-BD-45-E8-81",
            "name": "www-web2-nic",
            "private_ip_address": "10.0.3.4",
            "private_ip_addresses": [
              "10.0.3.4"
            ],
            "resource_group_name": "04-T1-www",
            "virtual_machine_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Compute/virtualMachines/www-web2vm"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "www-web2-nic",
            "resource_group_name": "04-T1-www",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.www_rg",
            "azurerm_subnet.www_web2",
            "azurerm_virtual_network.www_vnet0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "www_web2_v1_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/networkInterfaces/wwwweb2-v1-nic",
            "internal_domain_name_suffix": "plsfqsrugdfevfcjibhgtzueqe.psx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "www-web2-v1-nic-ipconf",
                "primary": true,
                "private_ip_address": "192.168.3.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet1/subnets/www-web2-v1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "koreasouth",
            "name": "wwwweb2-v1-nic",
            "private_ip_address": "192.168.3.4",
            "private_ip_addresses": [
              "192.168.3.4"
            ],
            "resource_group_name": "04-T1-www"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "wwwweb2-v1-nic",
            "resource_group_name": "04-T1-www",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.www_rg",
            "azurerm_subnet.www_web2_v1",
            "azurerm_virtual_network.www_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_application_gateway_backend_address_pool_association",
      "name": "www_web1_v1_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/applicationGateways/www-appgw/backendAddressPools/www-beap",
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/networkInterfaces/wwwweb1-v1-nic/ipConfigurations/www-web1-v1-nic-ipconf|/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/applicationGateways/www-appgw/backendAddressPools/www-beap",
            "ip_configuration_name": "www-web1-v1-nic-ipconf",
            "network_interface_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/networkInterfaces/wwwweb1-v1-nic"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_application_gateway.www_appgw",
            "azurerm_network_interface.www_web1_v1_nic",
            "azurerm_public_ip.www_appip",
            "azurerm_resource_group.www_rg",
            "azurerm_subnet.www_appgw",
            "azurerm_subnet.www_web1_v1",
            "azurerm_virtual_network.www_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_application_gateway_backend_address_pool_association",
      "name": "www_web2_v1_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/applicationGateways/www-appgw/backendAddressPools/www-beap",
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/networkInterfaces/wwwweb2-v1-nic/ipConfigurations/www-web2-v1-nic-ipconf|/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/applicationGateways/www-appgw/backendAddressPools/www-beap",
            "ip_configuration_name": "www-web2-v1-nic-ipconf",
            "network_interface_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/networkInterfaces/wwwweb2-v1-nic"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_application_gateway.www_appgw",
            "azurerm_network_interface.www_web2_v1_nic",
            "azurerm_public_ip.www_appip",
            "azurerm_resource_group.www_rg",
            "azurerm_subnet.www_appgw",
            "azurerm_subnet.www_web2_v1",
            "azurerm_virtual_network.www_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "www_nsg_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/networkSecurityGroups/www_nsg_db",
            "location": "koreacentral",
            "name": "www_nsg_db",
            "resource_group_name": "04-T1-www",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.0.0/16",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.0.0/16",
                  "192.168.0.0/16",
                  "61.108.60.26"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.0.0/16",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "db",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.0.0/16",
                  "192.168.0.0/16"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "www_nsg_db",
            "resource_group_name": "04-T1-www",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.www_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "www_nsg_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/networkSecurityGroups/www_nsg_http",
            "location": "koreacentral",
            "name": "www_nsg_http",
            "resource_group_name": "04-T1-www",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.0.0/16",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.0.0/16",
                  "192.168.0.0/16",
                  "61.108.60.26"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.0.0/16",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "http",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "www_nsg_http",
            "resource_group_name": "04-T1-www",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.www_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "www_nsg_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/networkSecurityGroups/www_nsg_ssh",
            "location": "koreacentral",
            "name": "www_nsg_ssh",
            "resource_group_name": "04-T1-www",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.0.0/16",
                  "192.168.0.0/16",
                  "61.108.60.26"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "www_nsg_ssh",
            "resource_group_name": "04-T1-www",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.www_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "www_v1_nsg_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/networkSecurityGroups/www_v1_nsg_http",
            "location": "koreasouth",
            "name": "www_v1_nsg_http",
            "resource_group_name": "04-T1-www",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.0.0/16",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.0.0/16",
                  "192.168.0.0/16",
                  "61.108.60.26"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.0.0/16",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "http",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "www_v1_nsg_http",
            "resource_group_name": "04-T1-www",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.www_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "www_appip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/publicIPAddresses/www-appip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.214.50.208",
            "ip_version": "IPv4",
            "location": "koreasouth",
            "name": "www-appip",
            "resource_group_name": "04-T1-www",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.www_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "www_basip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/publicIPAddresses/www-pubip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.249.73.120",
            "ip_version": "IPv4",
            "location": "koreacentral",
            "name": "www-pubip",
            "resource_group_name": "04-T1-www",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.www_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "www_natip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/publicIPAddresses/www-natip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.217.169.220",
            "ip_version": "IPv4",
            "location": "koreacentral",
            "name": "www-natip",
            "resource_group_name": "04-T1-www",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.www_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "www_natip_v1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/publicIPAddresses/www-natip-v1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.214.17.241",
            "ip_version": "IPv4",
            "location": "koreasouth",
            "name": "www-natip-v1",
            "resource_group_name": "04-T1-www",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.www_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "www_appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet1/subnets/www-appgw",
            "name": "www-appgw",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "04-T1-www",
            "virtual_network_name": "www-vnet1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "www-appgw",
            "resource_group_name": "04-T1-www",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1",
            "virtual_network_name": "www-vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.www_rg",
            "azurerm_virtual_network.www_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "www_bas",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/subnets/www-bas",
            "name": "www-bas",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "04-T1-www",
            "virtual_network_name": "www-vnet0"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "www-bas",
            "resource_group_name": "04-T1-www",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1",
            "virtual_network_name": "www-vnet0"
          },
          "dependencies": [
            "azurerm_resource_group.www_rg",
            "azurerm_virtual_network.www_vnet0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "www_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "default_outbound_access_enabled": false,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/subnets/www-db",
            "name": "www-db",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "04-T1-www",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "www-vnet0"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "www-db",
            "resource_group_name": "04-T1-www",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1",
            "virtual_network_name": "www-vnet0"
          },
          "dependencies": [
            "azurerm_resource_group.www_rg",
            "azurerm_virtual_network.www_vnet0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "www_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/subnets/www-nat",
            "name": "www-nat",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "04-T1-www",
            "virtual_network_name": "www-vnet0"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "www-nat",
            "resource_group_name": "04-T1-www",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1",
            "virtual_network_name": "www-vnet0"
          },
          "dependencies": [
            "azurerm_resource_group.www_rg",
            "azurerm_virtual_network.www_vnet0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "www_nat_v1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet1/subnets/www-nat-v1",
            "name": "www-nat-v1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "04-T1-www",
            "virtual_network_name": "www-vnet1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "www-nat-v1",
            "resource_group_name": "04-T1-www",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1",
            "virtual_network_name": "www-vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.www_rg",
            "azurerm_virtual_network.www_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "www_vmss",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.4.0/24"
            ],
            "default_outbound_access_enabled": false,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet1/subnets/www-vmss",
            "name": "www-vmss",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "04-T1-www",
            "virtual_network_name": "www-vnet1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "www-vmss",
            "resource_group_name": "04-T1-www",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1",
            "virtual_network_name": "www-vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.www_rg",
            "azurerm_virtual_network.www_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "www_web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": false,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/subnets/www-web1",
            "name": "www-web1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "04-T1-www",
            "virtual_network_name": "www-vnet0"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "www-web1",
            "resource_group_name": "04-T1-www",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1",
            "virtual_network_name": "www-vnet0"
          },
          "dependencies": [
            "azurerm_resource_group.www_rg",
            "azurerm_virtual_network.www_vnet0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "www_web1_v1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.2.0/24"
            ],
            "default_outbound_access_enabled": false,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet1/subnets/www-web1-v1",
            "name": "www-web1-v1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "04-T1-www",
            "virtual_network_name": "www-vnet1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "www-web1-v1",
            "resource_group_name": "04-T1-www",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1",
            "virtual_network_name": "www-vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.www_rg",
            "azurerm_virtual_network.www_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "www_web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": false,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/subnets/www-web2",
            "name": "www-web2",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "04-T1-www",
            "virtual_network_name": "www-vnet0"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "www-web2",
            "resource_group_name": "04-T1-www",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1",
            "virtual_network_name": "www-vnet0"
          },
          "dependencies": [
            "azurerm_resource_group.www_rg",
            "azurerm_virtual_network.www_vnet0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "www_web2_v1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.3.0/24"
            ],
            "default_outbound_access_enabled": false,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet1/subnets/www-web2-v1",
            "name": "www-web2-v1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "04-T1-www",
            "virtual_network_name": "www-vnet1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "www-web2-v1",
            "resource_group_name": "04-T1-www",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1",
            "virtual_network_name": "www-vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.www_rg",
            "azurerm_virtual_network.www_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "www_natdb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/subnets/www-db",
            "nat_gateway_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/natGateways/www-nat",
            "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/subnets/www-db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.www_nat",
            "azurerm_resource_group.www_rg",
            "azurerm_subnet.www_db",
            "azurerm_virtual_network.www_vnet0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "www_natvmss",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet1/subnets/www-vmss",
            "nat_gateway_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/natGateways/www-nat-v1",
            "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet1/subnets/www-vmss"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.www_nat_v1",
            "azurerm_resource_group.www_rg",
            "azurerm_subnet.www_vmss",
            "azurerm_virtual_network.www_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "www_natweb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/subnets/www-web1",
            "nat_gateway_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/natGateways/www-nat",
            "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/subnets/www-web1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.www_nat",
            "azurerm_resource_group.www_rg",
            "azurerm_subnet.www_web1",
            "azurerm_virtual_network.www_vnet0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "www_natweb1_v1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet1/subnets/www-web1-v1",
            "nat_gateway_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/natGateways/www-nat-v1",
            "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet1/subnets/www-web1-v1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.www_nat_v1",
            "azurerm_resource_group.www_rg",
            "azurerm_subnet.www_web1_v1",
            "azurerm_virtual_network.www_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "www_natweb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/subnets/www-web2",
            "nat_gateway_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/natGateways/www-nat",
            "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/subnets/www-web2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.www_nat",
            "azurerm_resource_group.www_rg",
            "azurerm_subnet.www_web2",
            "azurerm_virtual_network.www_vnet0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "www_natweb2_v1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet1/subnets/www-web2-v1",
            "nat_gateway_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/natGateways/www-nat-v1",
            "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet1/subnets/www-web2-v1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.www_nat_v1",
            "azurerm_resource_group.www_rg",
            "azurerm_subnet.www_web2_v1",
            "azurerm_virtual_network.www_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "www_asso_subnsg_bas",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/subnets/www-bas",
            "network_security_group_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/networkSecurityGroups/www_nsg_ssh",
            "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/subnets/www-bas"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.www_nsg_ssh",
            "azurerm_resource_group.www_rg",
            "azurerm_subnet.www_bas",
            "azurerm_virtual_network.www_vnet0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "www_asso_subnsg_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/subnets/www-db",
            "network_security_group_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/networkSecurityGroups/www_nsg_db",
            "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/subnets/www-db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.www_nsg_db",
            "azurerm_resource_group.www_rg",
            "azurerm_subnet.www_db",
            "azurerm_virtual_network.www_vnet0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "www_asso_subnsg_web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/subnets/www-web1",
            "network_security_group_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/networkSecurityGroups/www_nsg_http",
            "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/subnets/www-web1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.www_nsg_http",
            "azurerm_resource_group.www_rg",
            "azurerm_subnet.www_web1",
            "azurerm_virtual_network.www_vnet0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "www_asso_subnsg_web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/subnets/www-web2",
            "network_security_group_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/networkSecurityGroups/www_nsg_http",
            "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/subnets/www-web2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.www_nsg_http",
            "azurerm_resource_group.www_rg",
            "azurerm_subnet.www_web2",
            "azurerm_virtual_network.www_vnet0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "www_v1_asso_subnsg_vmss",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet1/subnets/www-vmss",
            "network_security_group_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/networkSecurityGroups/www_v1_nsg_http",
            "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet1/subnets/www-vmss"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.www_v1_nsg_http",
            "azurerm_resource_group.www_rg",
            "azurerm_subnet.www_vmss",
            "azurerm_virtual_network.www_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "www_v1_asso_subnsg_web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet1/subnets/www-web1-v1",
            "network_security_group_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/networkSecurityGroups/www_v1_nsg_http",
            "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet1/subnets/www-web1-v1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.www_v1_nsg_http",
            "azurerm_resource_group.www_rg",
            "azurerm_subnet.www_web1_v1",
            "azurerm_virtual_network.www_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "www_vnet0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "69e7a1f4-8e19-47d1-ade4-7526c42ac31f",
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0",
            "location": "koreacentral",
            "name": "www-vnet0",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "04-T1-www",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/subnets/www-bas",
                "name": "www-bas",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/networkSecurityGroups/www_nsg_ssh"
              },
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/subnets/www-nat",
                "name": "www-nat",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": false,
                "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/subnets/www-web1",
                "name": "www-web1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/networkSecurityGroups/www_nsg_http"
              },
              {
                "address_prefixes": [
                  "10.0.3.0/24"
                ],
                "default_outbound_access_enabled": false,
                "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/subnets/www-web2",
                "name": "www-web2",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/networkSecurityGroups/www_nsg_http"
              },
              {
                "address_prefixes": [
                  "10.0.4.0/24"
                ],
                "default_outbound_access_enabled": false,
                "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/subnets/www-db",
                "name": "www-db",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/networkSecurityGroups/www_nsg_db",
                "service_endpoints": [
                  "Microsoft.Storage"
                ]
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "www-vnet0",
            "resource_group_name": "04-T1-www",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.www_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "www_vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4a58e47a-3034-4aca-9449-404e69e68484",
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet1",
            "location": "koreasouth",
            "name": "www-vnet1",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "04-T1-www",
            "subnet": [
              {
                "address_prefixes": [
                  "192.168.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet1/subnets/www-appgw",
                "name": "www-appgw",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "192.168.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet1/subnets/www-nat-v1",
                "name": "www-nat-v1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "192.168.2.0/24"
                ],
                "default_outbound_access_enabled": false,
                "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet1/subnets/www-web1-v1",
                "name": "www-web1-v1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/networkSecurityGroups/www_v1_nsg_http"
              },
              {
                "address_prefixes": [
                  "192.168.3.0/24"
                ],
                "default_outbound_access_enabled": false,
                "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet1/subnets/www-web2-v1",
                "name": "www-web2-v1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "192.168.4.0/24"
                ],
                "default_outbound_access_enabled": false,
                "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet1/subnets/www-vmss",
                "name": "www-vmss",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/networkSecurityGroups/www_v1_nsg_http"
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "www-vnet1",
            "resource_group_name": "04-T1-www",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.www_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peer_ctr_sth",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0/virtualNetworkPeerings/ctr-sth",
            "name": "ctr-sth",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet1",
            "resource_group_name": "04-T1-www",
            "use_remote_gateways": false,
            "virtual_network_name": "www-vnet0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.www_rg",
            "azurerm_virtual_network.www_vnet0",
            "azurerm_virtual_network.www_vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peer_sth_ctr",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet1/virtualNetworkPeerings/sth-ctr",
            "name": "sth-ctr",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-T1-www/providers/Microsoft.Network/virtualNetworks/www-vnet0",
            "resource_group_name": "04-T1-www",
            "use_remote_gateways": false,
            "virtual_network_name": "www-vnet1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.www_rg",
            "azurerm_virtual_network.www_vnet0",
            "azurerm_virtual_network.www_vnet1"
          ]
        }
      ]
    }
  ]
}